final fixed swagger
