# server.js
@@ -10,6 +10,8 @@ const Routes = require('./routes/');
 const cors = require('cors');
 const port = process.env.PORT || 8080;
 const connectDB = require('./database/');
+const swaggerUI = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
 
 app.use(
   cors({
@@ -29,6 +31,8 @@ app.use(express.json());
 
 app.use('/', require('./routes/index'));
 app.use('/contacts', require('./routes/contactRoute'));
+app.use('/api-docs', swaggerUI.serve);
+app.get('/api-docs', swaggerUI.setup(swaggerDocument));
 
 connectDB.initDB((err) => {
   if (err) {
